[project]
name = "practical01"
version = "0.1.0"
description = "Practical guide to implementing a web application programming interface (API) using Flask."
license = "CC-BY-NC-SA-4.0"
authors = [
    {name = "Richard Thomas", email = "richard.thomas@uq.edu.au"}
]
readme = "README.md"
requires-python = ">=3.9"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
